# TravelApi

./: Cargo.toml  travel_api.db
src/: api_docs.rs  main.rs
src/db/: connection.rs  datetime.rs  mod.rs  schema.rs
src/middleware/: auth.rs
src/models/: mod.rs  point_of_interest.rs  route_option.rs  travel_plan.rs  user.rs
src/routes/: auth.rs  mod.rs  route_option.rs  travel_plan.rs
src/services/: auth_service.rs  mod.rs  route_option_service.rs  travel_plan_service.rs
src/tests/: auth_tests.rs  mod.rs  route_option_tests.rs  travel_plan_tests.rs
