[package]
name = "travel-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
# Swagger/OpenAPI dependencies
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
